# coach-bill

./: .gitignore  CLAUDE.md  PLAN.md  README.md
.claude/: security-review-instructions.md  settings.json
.claude/agents/: cold-reviewer.md  project-reviewer.md  test-author.md
.claude/commands/: feature.md  ship.md
.claude/rules/: backend.md  design.md  schema.md
.github/: security-scan-instructions.md
.github/workflows/: ci.yml  keepalive.yml  security-review.yml
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  deps.py  main.py  time.py
backend/app/ai/: extractor.py
backend/app/db/: check_ins.py  facts.py  health.py  pool.py  profiles.py  session.py
backend/app/routes/: check_ins.py  health.py  profiles.py
backend/app/schemas/: check_ins.py  extraction.py  health.py  profiles.py
backend/app/services/: check_ins.py  extraction.py  health.py  profiles.py
backend/tests/: conftest.py  test_auth.py  test_check_ins.py  test_data_isolation.py  test_extraction.py  test_extraction_db.py  test_extraction_live_model.py  test_gate_proof.py  test_health.py  test_profiles.py  test_rls_identity.py  test_table_privileges.py  test_time.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AppRoutes.tsx  index.css  main.tsx  vite-env.d.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20260629225832_init_schema.sql  20260706165449_profiles_consent_timezone.sql  20260716041018_grant_authenticated_table_access.sql  20260716184500_extraction.sql  (+1 more)
(+28 files in other folders)
